# lxp

./: .eslintrc.json  .gitignore  DEMO.md  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json
backend/: .env.example  .eslintrc.js  .gitignore  README.md  eslint.config.js  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/schemas/: __init__.py  m01_example_schema.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260212000000_add_m01_establishment_models/: migration.sql
backend/prisma/migrations/20260212000000_communications_schema/: migration.sql
backend/prisma/migrations/20260212000000_init_m01_auth_schema/: migration.sql
backend/prisma/migrations/20260212000000_init_m01_auth_user_schema/: migration.sql
backend/prisma/migrations/20260212000000_m01_establishment_schema/: migration.sql
backend/prisma/migrations/20260212171608_init_m01/: migration.sql
backend/prisma/migrations/20260214214435_sync/: migration.sql
backend/prisma/migrations/20260215190000_full_schema/: migration.sql
backend/scripts/: test-calendar-modo-clase-endpoints.sh  test-notifications-endpoints.sh  test-offline-sync-endpoints.sh  test-teacher-endpoints.sh
backend/src/: app.module.ts  index.ts  main.ts
backend/src/common/: index.ts
backend/src/m01/: m01.module.ts
backend/src/m09/: m09.module.ts
backend/src/m21/: m21.module.ts
backend/test/: m09-schema.e2e-spec.ts  org.e2e-spec.ts
backend/tests/: test_m01_example_schema.py
frontend/: .gitignore  (+8 more)
(+341 files in other folders)
